force-app/main/default/objects/Conference__c/Conference__c.object-meta.xml
<CustomObject>
    <description>Track conference details, the speakers and their topics.</description>
    <label>Conference</label>
    <nameField>
        <label>Conference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>