force-app/main/default/objects/Conference__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <label>Attendee Count</label>
    <summaryForeignKey>Attendee__c.Conference__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>