force-app/main/default/objects/Conference__c/fields/Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Participant_Count__c</fullName>
    <label>Participant Count</label>
    <summaryForeignKey>Participant__c.Conference__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>