force-app/main/default/objects/Conference__c/fields/Participant_Limit__c.field-meta.xml
<CustomField>
    <fullName>Participant_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Participant Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>