force-app/main/default/objects/Conference__c/validationRules/Limit_Attendees.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Attendees</fullName>
    <active>true</active>
    <description>Rule is to limit quantity of attendees.</description>
    <errorConditionFormula>Attendee_Count__c &gt;  Attendee_Limit__c</errorConditionFormula>
    <errorDisplayField>Attendee_Limit__c</errorDisplayField>
    <errorMessage>Quantity of attendees must not exceed seted limit.</errorMessage>
</ValidationRule>