force-app/main/default/objects/Conference__c/validationRules/Limit_Participant.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Participant</fullName>
    <active>true</active>
    <description>Rule is to limit quantity of attendees.</description>
    <errorConditionFormula>Participant_Count__c &gt;  Participant_Limit__c</errorConditionFormula>
    <errorDisplayField>Participant_Limit__c</errorDisplayField>
    <errorMessage>Quantity of attendees must not exceed seted limit.</errorMessage>
</ValidationRule>