force-app/main/default/objects/Conference__c/validationRules/Session_start_before_the_end.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_start_before_the_end</fullName>
    <active>true</active>
    <description>This rule invoke when start date greater then end date.</description>
    <errorConditionFormula>Start_Date__c   &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start of the session must be before the end.</errorMessage>
</ValidationRule>